[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/boss/ura.png" type="Texture" id=1]
[ext_resource path="res://Scripts/boss/Ura.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/cknifes.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.39159
height = 46.3972

[sub_resource type="Animation" id=2]
resource_name = "rot"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Ura" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4, -7 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="cknifes" parent="." instance=ExtResource( 3 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="cknifes"]
anims/rot = SubResource( 2 )

[node name="shootTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="hurtTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true
[connection signal="timeout" from="shootTimer" to="." method="_on_shootTimer_timeout"]
[connection signal="timeout" from="hurtTimer" to="." method="_on_hurtTimer_timeout"]
